# nornir-pools

./: .buildinfo  MultiprocessThreadpool.py  ParallelPythonPool.py  ProcessPool.py  README.md  Threadpool.py  __init__.py  api.html  examples.html  ez_setup.py  genindex.html  index.html  nornir-pools.pyproj  objects.inv  py-modindex.html  pyproject.toml  requirements.txt  search.html  searchindex.js  setup.py  task.py  tmp_requirements.txt  tmp_setup.py
.github/workflows/: python-app.yml
_modules/: index.html  nornir_pools.html
_modules/nornir_pools/: poolbase.html  task.html
_sources/: api.txt
docs/: Makefile  README.md  make.bat
docs/source/: api.rst  conf.py  examples.rst  index.rst
doctrees/: api.doctree  environment.pickle  examples.doctree  index.doctree
html/: api.html  examples.html  genindex.html  index.html  searchindex.js
html/_modules/: index.html  nornir_pools.html
html/_modules/nornir_pools/: poolbase.html  task.html
html/_sources/: examples.txt  index.txt
nornir_pools/: MultiprocessThreadpool.py  ParallelPythonPool.py  __init__.py  ipool.py  local_machine_pool.py  multiprocessthreadpool.py  parallelpythonpool.py  pool.py  poolbase.py  processpool.py  serialpool.py  shared_memory.py  task.py  threadpool.py
pools/: MultiprocessThreadpool.py  ParallelPythonPool.py  ProcessPool.py  Threadpool.py
pools/test/: test_pools.py
test/: __init__.py  test_nornir_pools.py  test_pools.py
