[build-system]
requires = ["setuptools >= 61.0"]
build-backend = 'setuptools.build_meta'

[tool.setuptools.packages.find]
where = ["."]
include = ["nornir_pools"]

[project]
name = "nornir_pools"
version = "1.5.1"
authors = [
  { name="James Anderson", email="James.R.Anderson@utah.edu" },
]
description = "A helper library that wraps python threads, multiprocessing, a process pool for shell commands, and parallel python with the same interface"
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.10"
dependencies = [
  "six >= 1.16",
  "numpy >= 1.26",
  "matplotlib >= 3.8",
  "nornir_shared @ git+https://github.com/clementsan/nornir-shared.git@dev",
]
classifiers = [
    "Programming Language :: Python :: 3.10",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering",
]

[project.optional-dependencies]
test = ["nose"]

[project.urls]
Homepage = "https://github.com/jamesra/nornir-pools"
Issues = "https://github.com/jamesra/nornir-pools/issues"
